k8s/network-policies/allow-proxy-to-backend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: allow-proxy-to-backend
    namespace: backtrade
spec:
    podSelector:
        matchLabels:
            app: api
            component: backend
    policyTypes:
        - Ingress
    ingress:
        - from:
              - podSelector:
                    matchLabels:
                        app: proxy
                        component: nginx
          ports:
              - protocol: TCP
                port: 3000
